# piecewise_jerk_path_optimizer

./: CMakeLists.txt  README.md  README_Matlab.md  README_speed.md  main.c  runqp.c  visualize.py
Matlab/: Piecewise_Jerk_Path.m  Piecewise_Jerk_Path.py  Piecewise_Jerk_Speed.m
include/: GlobalOptions.h  Matrices.h  matrix_gen_utils.h
src/: matrix_gen_utils.c  matrix_gen_utils_example.c  runqp.c
